<resources>
    <string name="app_name">Android极客</string>
    <string name="article">干货</string>
    <string name="gitHub">GitHub</string>
    <string name="password_manage">密码管理</string>
    <string name="music_play">音乐播放</string>
    <string name="to_do">ToDo</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="please_set_title">请设置标题</string>
    <string name="load_fail">加载失败！</string>
    <string name="please_retry">请重试！</string>
    <string name="save">保存</string>
    <string name="password_list">密码列表</string>
    <string name="edit">编辑</string>
    <string name="generate_random_password">生成随机密码</string>
    <string name="password_length_six">密码长度：6</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="password">密码</string>
    <string name="note">备注</string>
    <string name="platform">平台</string>
    <string name="account">账号</string>
    <string name="basic_information">基本信息</string>
    <string name="empty">无</string>
    <string name="send_to_notification">发送到通知栏</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="effects">特效</string>
    <string name="label_layout">标签布局</string>
    <string name="clear_data">清空数据</string>
    <string name="backup_data">备份数据</string>
    <string name="import_data">导入数据</string>
    <string name="modify_password">修改密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="flow_layout">流式布局</string>
    <string name="please_set_password">请先设置密码</string>
    <string name="password_error">密码错误</string>
    <string name="password_length_must_more_than_six">密码长度至少为6位</string>
    <string name="article_detail_menu_share">分享</string>
    <string name="more">更多</string>

    <string-array name="password_types">
        <item>全部随机</item>
        <item>数字字母组合</item>
        <item>仅数字</item>
        <item>仅字母</item>
    </string-array>

    <string-array name="task_list_types">
        <item>所有</item>
        <item>已完成</item>
        <item>未完成</item>
    </string-array>
</resources>
