<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:checked="true"
            android:id="@+id/menu_article"
            android:icon="@drawable/article"
            android:title="@string/article"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_gitHub"
            android:icon="@drawable/github"
            android:title="@string/gitHub"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_video"
            android:icon="@drawable/video"
            android:title="@string/video"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_password_manage"
            android:icon="@drawable/key"
            android:title="@string/password_manage"
            app:showAsAction="always" />

    </group>
</menu>