<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/clockBackgroundPrimary"
    android:orientation="vertical">

    <com.xiaomai.geek.ui.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/password"
                android:textColor="@color/colorPrimary" />

            <com.xiaomai.geek.ui.widget.MenuItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_delete_white_24dp"
                app:menuTitle="@string/clear_data" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <com.xiaomai.geek.ui.widget.MenuItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_sd_card_white_24dp"
                app:menuTitle="@string/backup_data" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <com.xiaomai.geek.ui.widget.MenuItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_move_to_inbox_white_24dp"
                app:menuTitle="@string/import_data" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <com.xiaomai.geek.ui.widget.MenuItemView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconDrawable="@drawable/ic_edit_white_24dp"
                app:menuTitle="@string/modify_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="其他"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>