<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/clockBackground"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_random_password"
        android:textColor="?attr/clockTextColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="?attr/clockTextColorSecond"
        tools:text="1234545" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_length_six"
        android:textColor="?attr/clockTextColorSecond" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/password_types"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/clockSelector"
            android:padding="10dp"
            android:src="@drawable/ic_autorenew_24dp"
            android:tint="@color/blue" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/clockSelector"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/cancel"
            android:textColor="?attr/clockTextColor" />

        <TextView
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/clockSelector"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/confirm"
            android:textColor="?attr/clockTextColor" />
    </LinearLayout>
</LinearLayout>